--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Install Dependencies
       run: bundle install
 
+    - name: Install Jekyll Tabs Plugin
+      run: bundle exec jekyll plugins
+
     - name: Build Jekyll
       run: bundle exec jekyll build
 
