--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,41 +1,55 @@
-name: Jekyll Build
+name: Deploy Jekyll site to Pages
 
 on:
   push:
-    branches:
-      - main # Change this to your main branch name
-  pull_request:
+    branches: ["gh-pages"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 2.7 # Adjust the version if needed
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
 
-    - name: Install Bundler
-      run: |
-        gem install bundler:2.5.5
-        bundle config set --local path 'vendor/bundle'
-        bundle config set --local without 'development:test'
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
 
-    - name: Install Dependencies
-      run: bundle install
+      - name: Update Bundler version
+        run: gem install bundler -v '~> 2.2'
 
-    - name: Install Jekyll Tabs Plugin
-      run: bundle exec jekyll plugins
+      - name: Install dependencies
+        run: bundle install --jobs 4
 
-    - name: Build Jekyll
-      run: bundle exec jekyll build
+      - name: Build with Jekyll
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        publish_dir: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
